syntax = "proto3";
package ranking.pii.user.profile;
option optimize_for = CODE_SIZE;
option csharp_namespace = "SnapProto.Ranking.Pii.User.Profile";

import "ranking/core/SCSCOREUuid.proto";

message FriendMetadataFeatures {
    .ranking.core.SCSCOREUUID friendId = 1;
    int32 mutualFriendCount = 2;
    int32 friendCount = 3;
}

message UserMetadataFeatures {
    string userId = 1;
    repeated .ranking.pii.user.profile.FriendMetadataFeatures friendMetadataFeaturesArray = 2;
}